reviews overlap on mobile fix

--- a/css/style.css
+++ b/css/style.css
@@ -1079,7 +1079,6 @@ body {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    grid-gap: 20px;
     height: 100%;
     width: 60%;
     margin: 0 auto; }
